test/fixtures/config/theming/error/gulpNotFound/.gulp.js
module.exports = {
  msgs: {
    error: {
      gulpNotFound: 'GULP NOT FOUND IN {CwdPath: {1}}',
    },
  },
  theme: {
    CwdPath: '**{1}**',
  },
};
